[gd_scene load_steps=20 format=4 uid="uid://bg2jtbpnpgh78"]

[ext_resource type="Texture2D" uid="uid://ckhxso1dyibm0" path="res://assets/locationDesign/lobby.png" id="1_o1atq"]
[ext_resource type="PackedScene" uid="uid://dg6tbf8uavjqm" path="res://scenes/player.tscn" id="2_5gu6x"]
[ext_resource type="Texture2D" uid="uid://cjgnsgbxc1c7m" path="res://assets/locationDesign/black.png" id="2_omrgh"]
[ext_resource type="Texture2D" uid="uid://bomeu7eehohu6" path="res://assets/loot/enchantment gap (10px).png" id="2_pc087"]
[ext_resource type="Texture2D" uid="uid://bpjkisxi0nyvl" path="res://assets/locationDesign/wall main.png" id="3_ncsg4"]
[ext_resource type="PackedScene" uid="uid://cfqyyw0haxij5" path="res://scenes/interface.tscn" id="3_nqcc7"]
[ext_resource type="Script" uid="uid://cs7k6fxsjuovk" path="res://scripts/camera_follow.gd" id="4_apkv3"]
[ext_resource type="Script" uid="uid://b8nykpkq7cwwe" path="res://scripts/inventory.gd" id="4_pc087"]
[ext_resource type="Script" uid="uid://dihdbhftx6il3" path="res://scripts/terminal_window.gd" id="7_yad6j"]
[ext_resource type="Texture2D" uid="uid://d04mxcdie4n04" path="res://assets/locationDesign/Terminal_bg.png" id="9_07nfq"]
[ext_resource type="PackedScene" uid="uid://dcp1e2sn18y8l" path="res://scenes/item_buy_cart.tscn" id="10_oipnb"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_omrgh"]
texture = ExtResource("1_o1atq")
texture_region_size = Vector2i(64, 64)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-0.2822342, 32, -32, 32, -32, -32, 32, -32, 32, -6.2092133, 7.0559235, 6.2092133)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, 32, 8.1848755, 32, -4.233551, 2.8223686, -32, -6.7736893, -32, -32, 32, -32)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
11:0/0 = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
12:0/0 = 0
12:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
13:0/0 = 0
13:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
14:0/0 = 0
14:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-0.2822342, 32, -32, 32, -32, -32, -0.8467102, -32)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, 32, 3.6690826, 32, 3.6690826, -32, 32, -32)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
11:1/0 = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
12:1/0 = 0
12:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
13:1/0 = 0
13:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
14:1/0 = 0
14:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:2/0 = 0
5:2/0 = 0
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, -2.8223686, -32, -2.8223686, -32, -32)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-1.4111786, -32, -1.9756546, -1.6934242, -32, -1.6934242, -32, -32)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-0.8467102, -1.6934242, -32, -1.1289482, -32, -32, -0.8467102, -32)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -0.564476, 3.6690826, -0.564476, 3.6690826, -32, 32, -32)
10:2/0 = 0
11:2/0 = 0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, 32, 4.798027, 32, 13.265137, 19.756584, 32, 7.3381577)
12:2/0 = 0
12:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, 32, -32, 32, -32, 6.2092133, 32, -32)
13:2/0 = 0
13:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(27.376984, 32, -32, 32, -32, -32, -9.878288, -26.530273, 12.136192, -12.4184265, 26.812515, 5.6447372)
14:2/0 = 0
14:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:3/0 = 0
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 26.530273, -10.442764, 25.965797, -32, 5.6447372, -32, -32)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 26.530273, -32, 27.094742, -32, -32)
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
11:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, 32, 3.6690826, -0.564476, 3.6690826, -32, 32, -32)
12:3/0 = 0
12:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 21.450005, 10.442772, 32, -32, 32, -32, -32)
13:3/0 = 0
13:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(26.812515, -32, 14.958557, -7.9026337, -9.313812, 6.7736855, -32, 19.192108, -32, -32)
14:3/0 = 0
14:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
14:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:5/0 = 0
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-13.265137, -27.094746, 32, -27.094746, 32, 32, -32, 32, -32, -7.3381615)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -25.401325, 32, -24.836851, 32, 32, -32, 32)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -27.094746, 7.6203995, -26.530273, 32, -2.8223686, 32, 32, -32, 32)
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
10:5/0 = 0
11:5/0 = 0
11:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -21.450008, 32, 32, -32, 32, -32, -4.515793, -12.700661, -21.450008)
12:5/0 = 0
12:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(10.442772, -22.01448, 32, -1.6934242, 32, 32, -32, 32, -32, -21.450008)
13:5/0 = 0
14:5/0 = 0
14:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:6/0 = 0
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 27.094742, -9.878288, 27.094742, -32, 6.7736855, -32, -32)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 27.094742, -32, 27.094742, -32, -32)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 9.596054, 11.00724, 27.094742, -32, 27.094742, -32, -32)
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
11:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 32, -13.829605, 32, -32, 12.4184265, -32, -32)
12:6/0 = 0
12:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 14.676323, 12.700668, 32, -32, 32, -32, -32)
13:6/0 = 0
14:6/0 = 0
14:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:7/0 = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
14:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:8/0 = 0
0:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:8/0 = 0
1:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:8/0 = 0
2:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:8/0 = 0
3:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:8/0 = 0
4:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:8/0 = 0
5:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:8/0 = 0
6:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:8/0 = 0
7:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:8/0 = 0
8:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
9:8/0 = 0
9:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
10:8/0 = 0
10:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
11:8/0 = 0
11:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
12:8/0 = 0
12:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
13:8/0 = 0
13:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
14:8/0 = 0
14:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -4.515793, 32, 32, -32, 32, -32, 32, -32, 26.530273, 0.28224182, -4.515793)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -4.515793, 32, 32, -32, 32, -32, 32, -32, -3.9513168)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-1.4111786, -5.080265, 32, 26.530273, 32, 32, -32, 32, -32, 32, -32, -3.9513168)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 9.596054, 11.00724, 27.094742, -32, 27.094742, -32, -32)
5:3/0 = 0
6:3/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
8:5/0 = 0
9:5/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ncsg4"]
texture = ExtResource("2_omrgh")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_07nfq"]
texture = ExtResource("3_ncsg4")
texture_region_size = Vector2i(64, 64)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 32, -32, 32, -32, -32)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 32, -32, 32, -32, -32)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 32, -32, 32, -32, -32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 32, -32, 32, -32, -32)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 32, -32, 32, -32, -32)

[sub_resource type="TileSet" id="TileSet_q60fs"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 4
sources/0 = SubResource("TileSetAtlasSource_omrgh")
sources/1 = SubResource("TileSetAtlasSource_ncsg4")
sources/3 = SubResource("TileSetAtlasSource_07nfq")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_apkv3"]
texture = ExtResource("2_pc087")
separation = Vector2i(10, 0)
texture_region_size = Vector2i(32, 32)
0:0/next_alternative_id = 2
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.087502, -15.805267, 15.523033, -15.805267, 14.394081, 16.369743, -15.523033, 15.805267)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.087502, -15.805267, 15.523033, -15.805267, 14.394081, 16.369743, -15.523033, 15.805267)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.087502, -15.805267, 15.523033, -15.805267, 14.394081, 16.369743, -15.523033, 15.805267)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.087502, -15.805267, 15.523033, -15.805267, 14.394081, 16.369743, -15.523033, 15.805267)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.087502, -15.805267, 15.523033, -15.805267, 14.394081, 16.369743, -15.523033, 15.805267)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.087502, -15.805267, 15.523033, -15.805267, 14.394081, 16.369743, -15.523033, 15.805267)

[sub_resource type="TileSet" id="TileSet_omrgh"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_apkv3")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ncsg4"]
radius = 37.0
height = 88.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m1sns"]
size = Vector2(186.25, 79.5)

[node name="Lobby" type="Node2D"]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(768, 512)
tile_map_data = PackedByteArray("AADx//b/AQAAAAAAAADy//b/AQAAAAAAAADy//f/AQAAAAAAAADz//f/AQAAAAAAAADz//j/AQAAAAAAAAD0//j/AAAAAAAAAAD1//j/AAABAAAAAAD1//n/AAABAAEAAAD2//n/AAACAAEAAAD3//r/AAADAAIAAAD4//r/AAAEAAIAAAD4//v/AAAEAAMAAAD5//v/AAAFAAMAAAD6//v/AAAJAAUAAAD7//v/AAAHAAMAAAD7//z/AAAHAAQAAAD8//z/AAAIAAQAAAD9//z/AAAJAAQAAAD+//z/AAAKAAQAAAD+//v/AAAKAAMAAAD///r/AAALAAIAAAD///n/AAALAAEAAAD0//n/AAAAAAEAAAD0//r/AAAAAAIAAAD0//v/AAAAAAMAAAD0//z/AAAAAAQAAAD0//3/AAAAAAUAAAD0//7/AAAAAAYAAAD0////AAAAAAcAAAD0/wAAAwABAAAAAAD1//r/AAABAAIAAAD1//v/AAABAAMAAAD1//z/AAABAAQAAAD1//3/AAABAAUAAAD1//7/AAABAAYAAAD1////AAABAAcAAAD1/wAAAwACAAAAAAD2//j/AAACAAAAAAD2//r/AAACAAIAAAD2//v/AAACAAMAAAD2//z/AAACAAQAAAD2//3/AAACAAUAAAD2//7/AAACAAYAAAD2////AAACAAcAAAD2/wAAAAACAAgAAAD3//j/AAADAAAAAAD3//n/AAADAAEAAAD3//v/AAADAAMAAAD3//z/AAADAAQAAAD3//3/AAADAAUAAAD3//7/AAADAAYAAAD3////AAADAAcAAAD3/wAAAAADAAgAAAD4//j/AAAEAAAAAAD4//n/AAAEAAEAAAD4//z/AAAEAAQAAAD4//3/AAAEAAUAAAD4//7/AAAEAAYAAAD4////AAAEAAcAAAD4/wAAAwACAAAAAAD5//j/AAAFAAAAAAD5//n/AAAFAAEAAAD5//r/AAAFAAIAAAD5//z/AAAFAAQAAAD5//3/AAAFAAUAAAD5//7/AAAFAAYAAAD5////AAAFAAcAAAD5/wAAAwACAAAAAAD6//j/AAAGAAAAAAD6//n/AAAGAAEAAAD6//r/AAAGAAIAAAD6//z/AAAHAAUAAAD6//3/AAAGAAUAAAD6//7/AAAGAAYAAAD6////AAAGAAcAAAD6/wAAAwACAAAAAAD7//j/AAAHAAAAAAD7//n/AAAHAAEAAAD7//r/AAAHAAIAAAD7//3/AAAHAAUAAAD7//7/AAAHAAYAAAD7////AAAHAAcAAAD7/wAAAwACAAAAAAD8//j/AAAIAAAAAAD8//n/AAAIAAEAAAD8//r/AAAIAAIAAAD8//v/AAAIAAMAAAD8//3/AAAIAAUAAAD8//7/AAAIAAYAAAD8////AAAIAAcAAAD8/wAAAwACAAAAAAD9//j/AAAJAAAAAAD9//n/AAAJAAEAAAD9//r/AAAJAAIAAAD9//v/AAAJAAMAAAD9//3/AAAJAAUAAAD9//7/AAAJAAYAAAD9////AAAJAAcAAAD9/wAAAwACAAAAAAD+//j/AAAKAAAAAAD+//n/AAAKAAEAAAD+//r/AAAKAAIAAAD+//3/AAAKAAUAAAD+//7/AAAKAAYAAAD+////AAAKAAcAAAD+/wAAAwACAAAAAAD///j/AAALAAAAAAD///v/AAALAAMAAAD///z/AAALAAQAAAD///3/AAALAAUAAAD///7/AAALAAYAAAD/////AAALAAcAAAD//wAAAAALAAgAAAAAAPj/AAAMAAAAAAAAAPn/AAAMAAEAAAAAAPr/AAAMAAIAAAAAAPv/AAAMAAMAAAAAAPz/AAAMAAQAAAAAAP3/AAAMAAUAAAAAAP7/AAAMAAYAAAAAAP//AAAMAAcAAAAAAAAAAAAMAAgAAAABAPj/AAANAAAAAAABAPn/AAANAAEAAAABAPr/AAANAAIAAAABAPv/AAANAAMAAAABAPz/AAANAAQAAAABAP3/AAANAAUAAAABAP7/AAANAAYAAAABAP//AAANAAcAAAABAAAAAwACAAAAAAACAPj/AAAOAAAAAAACAPn/AAAOAAEAAAACAPr/AAAOAAIAAAACAPv/AAAOAAMAAAACAPz/AAAOAAQAAAACAP3/AAAOAAUAAAACAP7/AAAOAAYAAAACAP//AAAOAAcAAAACAAAAAwABAAAAAADz/wAAAQAAAAAAAADz////AQAAAAAAAADz//7/AQAAAAAAAADz//3/AQAAAAAAAADz//z/AQAAAAAAAADz//v/AQAAAAAAAADz//r/AQAAAAAAAADz//n/AQAAAAAAAADz//b/AQAAAAAAAADx//f/AQAAAAAAAADy//j/AQAAAAAAAADx//j/AQAAAAAAAADx//n/AQAAAAAAAADx//r/AQAAAAAAAADx//v/AQAAAAAAAADx//z/AQAAAAAAAADx//3/AQAAAAAAAADx//7/AQAAAAAAAADx////AQAAAAAAAADy////AQAAAAAAAADy//7/AQAAAAAAAADy//3/AQAAAAAAAADy//z/AQAAAAAAAADy//v/AQAAAAAAAADy//r/AQAAAAAAAADy//n/AQAAAAAAAADy/wAAAQAAAAAAAADy/wEAAQAAAAAAAADx/wAAAQAAAAAAAADx/wEAAQAAAAAAAADx/wIAAQAAAAAAAADz/wEAAQAAAAAAAAD0/wEAAQAAAAAAAAD1/wEAAQAAAAAAAAD2/wEAAQAAAAAAAAD3/wEAAQAAAAAAAAD4/wEAAQAAAAAAAAD5/wEAAQAAAAAAAAD6/wEAAQAAAAAAAAD7/wEAAQAAAAAAAAD8/wEAAQAAAAAAAAD9/wEAAQAAAAAAAAD+/wEAAQAAAAAAAAD//wEAAQAAAAAAAAAAAAEAAQAAAAAAAAABAAEAAQAAAAAAAAACAAEAAQAAAAAAAAADAAEAAQAAAAAAAAAEAAEAAQAAAAAAAAAFAAEAAQAAAAAAAAAFAAAAAQAAAAAAAAAFAP//AQAAAAAAAAAFAP7/AQAAAAAAAAAFAP3/AQAAAAAAAAAFAPz/AQAAAAAAAAAFAPv/AQAAAAAAAAAFAPr/AQAAAAAAAAAFAPn/AQAAAAAAAAAFAPj/AQAAAAAAAAAEAPj/AQAAAAAAAAADAPj/AQAAAAAAAAADAPn/AQAAAAAAAAADAPr/AQAAAAAAAAADAPv/AQAAAAAAAAADAPz/AQAAAAAAAAADAP3/AQAAAAAAAAAEAP3/AQAAAAAAAAAEAP7/AQAAAAAAAAAEAP//AQAAAAAAAAAEAAAAAQAAAAAAAAADAAAAAQAAAAAAAAADAP//AQAAAAAAAAADAP7/AQAAAAAAAAAEAPv/AQAAAAAAAAAEAPr/AQAAAAAAAAAEAPn/AQAAAAAAAAAEAPz/AQAAAAAAAADy/wIAAQAAAAAAAADz/wIAAQAAAAAAAAD0/wIAAQAAAAAAAAD1/wIAAQAAAAAAAAD2/wIAAQAAAAAAAAD3/wIAAQAAAAAAAAD4/wIAAQAAAAAAAAD5/wIAAQAAAAAAAAD6/wIAAQAAAAAAAAD7/wIAAQAAAAAAAAD8/wIAAQAAAAAAAAD9/wIAAQAAAAAAAAD+/wIAAQAAAAAAAAD//wIAAQAAAAAAAAAAAAIAAQAAAAAAAAABAAIAAQAAAAAAAAACAAIAAQAAAAAAAAADAAIAAQAAAAAAAAAEAAIAAQAAAAAAAAAFAAIAAQAAAAAAAAAGAAIAAQAAAAAAAAAGAAEAAQAAAAAAAAAGAAAAAQAAAAAAAAAGAP//AQAAAAAAAAAGAP7/AQAAAAAAAAAGAP3/AQAAAAAAAAAGAPz/AQAAAAAAAAAGAPv/AQAAAAAAAAAGAPr/AQAAAAAAAAAGAPn/AQAAAAAAAAAGAPj/AQAAAAAAAAAGAPf/AQAAAAAAAAAFAPf/AQAAAAAAAAAEAPf/AQAAAAAAAAADAPf/AQAAAAAAAAACAPf/AQAAAAAAAAABAPf/AQAAAAAAAAAAAPf/AQAAAAAAAAD///f/AQAAAAAAAAD+//f/AQAAAAAAAAD9//f/AQAAAAAAAAD8//f/AQAAAAAAAAD7//f/AQAAAAAAAAD6//f/AQAAAAAAAAD5//f/AQAAAAAAAAD4//f/AQAAAAAAAAD3//f/AQAAAAAAAAD2//f/AQAAAAAAAAD1//f/AQAAAAAAAAD0//f/AQAAAAAAAAD0//b/AQAAAAAAAAD1//b/AQAAAAAAAAD2//b/AQAAAAAAAAD3//b/AQAAAAAAAAD4//b/AQAAAAAAAAD5//b/AQAAAAAAAAD6//b/AQAAAAAAAAD7//b/AQAAAAAAAAD8//b/AQAAAAAAAAD9//b/AQAAAAAAAAD+//b/AQAAAAAAAAD///b/AQAAAAAAAAAAAPb/AQAAAAAAAAABAPb/AQAAAAAAAAACAPb/AQAAAAAAAAADAPb/AQAAAAAAAAAEAPb/AQAAAAAAAAAFAPb/AQAAAAAAAAAGAPb/AQAAAAAAAAAHAPb/AQAAAAAAAAAHAPf/AQAAAAAAAAAHAPj/AQAAAAAAAAAHAPn/AQAAAAAAAAAHAPr/AQAAAAAAAAAHAPv/AQAAAAAAAAAHAPz/AQAAAAAAAAAHAP3/AQAAAAAAAAAHAP7/AQAAAAAAAAAHAP//AQAAAAAAAAAHAAAAAQAAAAAAAAAHAAEAAQAAAAAAAAAHAAIAAQAAAAAAAAAHAAMAAQAAAAAAAAAGAAMAAQAAAAAAAAAFAAMAAQAAAAAAAAAEAAMAAQAAAAAAAAADAAMAAQAAAAAAAAACAAMAAQAAAAAAAAABAAMAAQAAAAAAAAAAAAMAAQAAAAAAAAD//wMAAQAAAAAAAAD+/wMAAQAAAAAAAAD9/wMAAQAAAAAAAAD8/wMAAQAAAAAAAAD7/wMAAQAAAAAAAAD6/wMAAQAAAAAAAAD5/wMAAQAAAAAAAAD4/wMAAQAAAAAAAAD3/wMAAQAAAAAAAAD2/wMAAQAAAAAAAAD1/wMAAQAAAAAAAAD0/wMAAQAAAAAAAADz/wMAAQAAAAAAAADw/wIAAQAAAAAAAADw/wMAAQAAAAAAAADx/wMAAQAAAAAAAADy/wMAAQAAAAAAAADw/wEAAQAAAAAAAADw/wAAAQAAAAAAAADw////AQAAAAAAAADw//7/AQAAAAAAAADw//3/AQAAAAAAAADw//z/AQAAAAAAAADw//v/AQAAAAAAAADw//r/AQAAAAAAAADw//n/AQAAAAAAAADw//j/AQAAAAAAAADw//f/AQAAAAAAAADw//b/AQAAAAAAAADw//X/AQAAAAAAAADx//X/AQAAAAAAAADy//X/AQAAAAAAAADz//X/AQAAAAAAAAD0//X/AQAAAAAAAAD1//X/AQAAAAAAAAD2//X/AQAAAAAAAAD3//X/AQAAAAAAAAD4//X/AQAAAAAAAAD5//X/AQAAAAAAAAD6//X/AQAAAAAAAAD7//X/AQAAAAAAAAD8//X/AQAAAAAAAAD9//X/AQAAAAAAAAD+//X/AQAAAAAAAAD///X/AQAAAAAAAAAAAPX/AQAAAAAAAAABAPX/AQAAAAAAAAACAPX/AQAAAAAAAAADAPX/AQAAAAAAAAAEAPX/AQAAAAAAAAAFAPX/AQAAAAAAAAAGAPX/AQAAAAAAAAAHAPX/AQAAAAAAAAAIAPX/AQAAAAAAAAAIAPb/AQAAAAAAAAAIAPf/AQAAAAAAAAAIAPj/AQAAAAAAAAAIAPn/AQAAAAAAAAAIAPr/AQAAAAAAAAAIAPv/AQAAAAAAAAAIAPz/AQAAAAAAAAAIAP3/AQAAAAAAAAAIAP7/AQAAAAAAAAAIAP//AQAAAAAAAAAIAAAAAQAAAAAAAAAIAAEAAQAAAAAAAAAIAAIAAQAAAAAAAAAHAAQAAQAAAAAAAAAIAAMAAQAAAAAAAAAIAAQAAQAAAAAAAAAGAAQAAQAAAAAAAAAFAAQAAQAAAAAAAAAEAAQAAQAAAAAAAAADAAQAAQAAAAAAAAACAAQAAQAAAAAAAAABAAQAAQAAAAAAAAAAAAQAAQAAAAAAAAD//wQAAQAAAAAAAAD+/wQAAQAAAAAAAAD9/wQAAQAAAAAAAAD8/wQAAQAAAAAAAAD7/wQAAQAAAAAAAAD6/wQAAQAAAAAAAAD5/wQAAQAAAAAAAAD4/wQAAQAAAAAAAADw/wQAAQAAAAAAAADx/wQAAQAAAAAAAADy/wQAAQAAAAAAAADz/wQAAQAAAAAAAAD0/wQAAQAAAAAAAAD1/wQAAQAAAAAAAAD2/wQAAQAAAAAAAAD3/wQAAQAAAAAAAADv//X/AQAAAAAAAADv//b/AQAAAAAAAADv//f/AQAAAAAAAADv//j/AQAAAAAAAADv//n/AQAAAAAAAADv//r/AQAAAAAAAADv//v/AQAAAAAAAADv//z/AQAAAAAAAADv//3/AQAAAAAAAADv//7/AQAAAAAAAADv////AQAAAAAAAADv/wAAAQAAAAAAAADv/wEAAQAAAAAAAADv/wIAAQAAAAAAAADv/wMAAQAAAAAAAADv/wQAAQAAAAAAAADu/wQAAQAAAAAAAADu/wMAAQAAAAAAAADu/wIAAQAAAAAAAADu/wEAAQAAAAAAAADu//z/AQAAAAAAAADu//v/AQAAAAAAAADu//3/AQAAAAAAAADu//7/AQAAAAAAAADu////AQAAAAAAAADu/wAAAQAAAAAAAADu//r/AQAAAAAAAADu//n/AQAAAAAAAADu//j/AQAAAAAAAADu//f/AQAAAAAAAADu//b/AQAAAAAAAADu//X/AQAAAAAAAADu//T/AQAAAAAAAADv//T/AQAAAAAAAADw//T/AQAAAAAAAADx//T/AQAAAAAAAADy//T/AQAAAAAAAADz//T/AQAAAAAAAAD0//T/AQAAAAAAAAD1//T/AQAAAAAAAAD2//T/AQAAAAAAAAD3//T/AQAAAAAAAAD4//T/AQAAAAAAAAD5//T/AQAAAAAAAAD6//T/AQAAAAAAAAD7//T/AQAAAAAAAAD8//T/AQAAAAAAAAD9//T/AQAAAAAAAAD+//T/AQAAAAAAAAD///T/AQAAAAAAAAAAAPT/AQAAAAAAAAABAPT/AQAAAAAAAAACAPT/AQAAAAAAAAADAPT/AQAAAAAAAAAEAPT/AQAAAAAAAAAFAPT/AQAAAAAAAAAGAPT/AQAAAAAAAAAHAPT/AQAAAAAAAAAIAPT/AQAAAAAAAAAIAAUAAQAAAAAAAAAHAAUAAQAAAAAAAAAGAAUAAQAAAAAAAAAFAAUAAQAAAAAAAAAEAAUAAQAAAAAAAAADAAUAAQAAAAAAAAACAAUAAQAAAAAAAAABAAUAAQAAAAAAAAAAAAUAAQAAAAAAAAD//wUAAQAAAAAAAAD+/wUAAQAAAAAAAAD9/wUAAQAAAAAAAAD8/wUAAQAAAAAAAAD7/wUAAQAAAAAAAAD6/wUAAQAAAAAAAAD5/wUAAQAAAAAAAAD4/wUAAQAAAAAAAAD3/wUAAQAAAAAAAAD2/wUAAQAAAAAAAAD1/wUAAQAAAAAAAAD0/wUAAQAAAAAAAADz/wUAAQAAAAAAAADy/wUAAQAAAAAAAADx/wUAAQAAAAAAAADw/wUAAQAAAAAAAADv/wUAAQAAAAAAAADu/wUAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_q60fs")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
unique_name_in_owner = true
visible = false
tile_map_data = PackedByteArray("AAADAAAAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_omrgh")

[node name="Player" parent="." instance=ExtResource("2_5gu6x")]
unique_name_in_owner = true
position = Vector2(480, 348)

[node name="Camera" type="Camera2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 4)
script = ExtResource("4_apkv3")

[node name="ExitToLvlArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitToLvlArea2D"]
position = Vector2(577, 72)
shape = SubResource("CapsuleShape2D_ncsg4")
debug_color = Color(0.65883464, 0.51488405, 0.0658194, 0.41960785)

[node name="TerminalActivateArea2D" type="Area2D" parent="."]
scale = Vector2(1.0015689, 0.95538825)
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TerminalActivateArea2D"]
position = Vector2(433, 165.75)
scale = Vector2(0.83934015, 1.1633596)
shape = SubResource("RectangleShape2D_m1sns")

[node name="Terminal" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("7_yad6j")

[node name="TextureRect" type="TextureRect" parent="Terminal"]
offset_left = 185.0
offset_right = 968.0
offset_bottom = 648.0
texture = ExtResource("9_07nfq")

[node name="ItemBuyCart" parent="Terminal" instance=ExtResource("10_oipnb")]
offset_left = 405.0
offset_top = 175.0
offset_right = 503.0
offset_bottom = 334.0

[node name="ItemBuyCart2" parent="Terminal" instance=ExtResource("10_oipnb")]
offset_left = 529.0
offset_top = 175.0
offset_right = 627.0
offset_bottom = 334.0

[node name="ItemBuyCart3" parent="Terminal" instance=ExtResource("10_oipnb")]
offset_left = 652.0
offset_top = 175.0
offset_right = 750.0
offset_bottom = 334.0

[node name="ItemBuyCart4" parent="Terminal" instance=ExtResource("10_oipnb")]
offset_left = 405.0
offset_top = 375.0
offset_right = 503.0
offset_bottom = 534.0

[node name="ItemBuyCart5" parent="Terminal" instance=ExtResource("10_oipnb")]
offset_left = 528.0
offset_top = 377.0
offset_right = 626.0
offset_bottom = 536.0

[node name="ExitMenuButton" type="MenuButton" parent="Terminal"]
offset_left = 500.0
offset_top = 578.0
offset_right = 656.0
offset_bottom = 613.0
theme_override_colors/font_color = Color(0.023529412, 0.8784314, 0.9372549, 1)
theme_override_font_sizes/font_size = 19
text = "Exit"

[node name="Interface" parent="." instance=ExtResource("3_nqcc7")]

[node name="Inventory" type="Node" parent="Interface"]
unique_name_in_owner = true
script = ExtResource("4_pc087")
metadata/_custom_type_script = "uid://b8nykpkq7cwwe"

[node name="HelpLabel" type="Label" parent="Interface"]
custom_minimum_size = Vector2(50, 0)
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.973
anchor_right = 0.5
anchor_bottom = 0.973
offset_left = -0.5
offset_top = -23.0
offset_right = 0.5
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.99215686, 0.654902, 0, 1)

[connection signal="body_entered" from="ExitToLvlArea2D" to="Player" method="_body_entered_from_lobby_to_lvl"]
[connection signal="body_entered" from="TerminalActivateArea2D" to="Terminal" method="_open_terminal_permission"]
[connection signal="body_exited" from="TerminalActivateArea2D" to="Terminal" method="_open_terminal_ban"]
[connection signal="pressed" from="Terminal/ExitMenuButton" to="Terminal" method="_close_terminal"]
